src/tests/snapshots/synoik__tests__window_opening__check_fullscreen_maximize@tmF-wfsAU-wmB.snap
---
source: src/tests/window_opening.rs
description: "open maximized to edges: false\nwant fullscreen: AU\nwant maximized: B"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: []
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
