src/tests/snapshots/synoik__tests__window_opening__check_fullscreen_maximize@tmF-wfsBN-wmBU.snap
---
source: src/tests/window_opening.rs
description: "open maximized to edges: false\nwant fullscreen: BN\nwant maximized: BU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
